plugins {
	id 'org.springframework.boot' version '2.5.5'
	id 'io.spring.dependency-management' version '1.0.11.RELEASE'
	id 'java'
}

group = 'SWUNIV.Hackathon'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '11'

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-web'
	developmentOnly 'org.springframework.boot:spring-boot-devtools'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	implementation 'io.springfox:springfox-swagger2:2.9.2'
	implementation 'io.springfox:springfox-swagger-ui:2.9.2'
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'io.jsonwebtoken:jjwt:0.9.1'
	implementation 'org.springframework.boot:spring-boot-starter-validation:2.6.4'
	implementation 'org.springframework.boot:spring-boot-starter-mail'
	implementation 'com.h2database:h2'
	implementation 'com.google.code.gson:gson:2.8.6'
	implementation 'com.jlefebure:spring-boot-starter-minio:1.1'
	implementation 'commons-io:commons-io:2.11.0'

	// lombok
	compileOnly 'org.projectlombok:lombok'

	// mapstruct
	implementation 'org.mapstruct:mapstruct:1.4.2.Final'
	annotationProcessor 'org.mapstruct:mapstruct-processor:1.4.2.Final'

	// lombok
	annotationProcessor 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok-mapstruct-binding:0.2.0'

	// server
	implementation 'mysql:mysql-connector-java'
	runtimeOnly 'mysql:mysql-connector-java'
}

test {
	useJUnitPlatform()
}
